2005-06-03  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-cache.c: (_cairo_cache_init), (_cairo_cache_destroy):
	Remove unused cache->refcount and _cairo_cache_reference().

	* src/cairo-cache.c: (_cairo_cache_destroy): Remove gratuitous
	nesting as recommended in CODING_STYLE.

2005-06-03  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:	
	* src/cairo-array.c: (_cairo_user_data_array_fini):
	* src/cairo-font.c: (cairo_font_face_destroy):
	* src/cairo-surface.c: (cairo_surface_destroy): Fix name of
	_cairo_user_data_array_destroy to be _cairo_user_data_array_fini.

2005-06-03  Carl Worth  <cworth@cworth.org>

	* src/cairo-glitz-surface.c:
	(_cairo_glitz_glyph_cache_create_entry),
	(_cairo_glitz_glyph_cache_destroy_entry),
	(_cairo_glitz_glyph_cache_destroy_cache),
	(_cairo_glitz_surface_show_glyphs): Rename functions to match the
	naming scheme used by cairo-cache.c and all other users of
	it. Though it's quite likely that glitz had this right and now
	everything could be changed to match it instead. I'll save that
	for some day when we're cleaning up the cache code.

2005-06-03  Carl Worth  <cworth@cworth.org>

	* CODING_STYLE: Fix spelling errors.

2005-06-03  Carl Worth  <cworth@cworth.org>

	* CODING_STYLE: Fix Freudian unwrapped line in paragraph
	describing why long lines should be wrapped.

2005-06-03  Carl Worth  <cworth@cworth.org>

	* CODING_STYLE: Add CODING_STYLE document to standardize on some
	style issues.

	* src/cairo-atsui-font.c:
	* src/cairo-cache.c:
	* src/cairo-ft-font.c:
	* src/cairo-glitz-surface.c:
	* src/cairo-gstate.c:
	* src/cairo-matrix.c:
	* src/cairo-pattern.c:
	* src/cairo-pdf-surface.c:
	* src/cairo-spline.c:
	* src/cairo-wideint.c:
	* src/cairo-win32-font.c:
	* src/cairo-xlib-surface.c: Standardize brace handling around all
	else clauses according to new CODING_STYLE guidelines.

2005-06-03  Kristian Høgsberg  <krh@redhat.com>

	Patch from Tomasz Cholewo <cholewo@ieee-cis.org>:
